--- a/Configuration/NodeTypes.yaml
+++ b/Configuration/NodeTypes.yaml
@@ -411,6 +411,12 @@
         label: Detailseite
         inspector:
           group: general
+    banner:
+      type: TYPO3\Media\Domain\Model\ImageInterface
+      ui:
+        label: 'Banner'
+        inspector:
+          group: frontpage
 'GSL.DuttweilerDe.Content:EventPromoter':
   superTypes:
     'TYPO3.Neos:Content': true
