add default value to headline property 'layout'

--- a/Configuration/NodeTypes.yaml
+++ b/Configuration/NodeTypes.yaml
@@ -632,6 +632,7 @@
       type: string
       ui:
         label: 'Typ'
+        defaultValue: 'underline'
         reloadIfChanged: TRUE
         inspector:
           group: style
