add ContentCollection for standalone news to frontpage

--- a/Configuration/NodeTypes.yaml
+++ b/Configuration/NodeTypes.yaml
@@ -29,6 +29,12 @@
           '*': false
     banner:
       type: 'TYPO3.Neos:ContentCollection'
+    standaloneNews:
+      type: 'TYPO3.Neos:ContentCollection'
+      constraints:
+        nodeTypes:
+          'GSL.DuttweilerDe.Content:FrontpageNewsItemStandalone': true
+          '*': false
   properties:
     hasBanner:
       type: boolean
