--- a/Configuration/NodeTypes.yaml
+++ b/Configuration/NodeTypes.yaml
@@ -483,8 +483,13 @@
       ui:
         label: 'Untertitel'
         reloadIfChanged: true
+        inlineEditable: true
+        aloha:
+          'link':
+            'a': true
         inspector:
           group: general
+          editor: 'TYPO3.Neos/Inspector/Editors/TextAreaEditor'
     date:
       type: DateTime
       ui:
