--- a/Configuration/Policy.yaml
+++ b/Configuration/Policy.yaml
@@ -19,5 +19,5 @@ privilegeTargets:
     'GSL.DuttweilerDe:Backend.App':
       matcher: 'method(GSL\DuttweilerDe\Controller\Module\DuttweilerAppController->indexAction())'
     'GSL.DuttweilerDe:Backend.App.Shoutout':
-      matcher: 'method(GSL\DuttweilerDe\Controller\Module\DuttweilerApp\DigitalShoutoutController->indexAction())'
+      matcher: 'method(GSL\DuttweilerDe\Controller\Module\DuttweilerApp\DigitalShoutoutController->(index|send)Action())'
       
