--- a/Configuration/Policy.yaml
+++ b/Configuration/Policy.yaml
@@ -13,6 +13,8 @@ roles:
       -
         privilegeTarget: 'GSL.DuttweilerDe:Backend.App.Shoutout'
         permission: GRANT
+  TYPO3.Neos:LivePublisher:
+    privileges:
       -
         privilegeTarget: 'GSL.DuttweilerDe:Backend.App.ReviewNotifications'
         permission: GRANT
